# unlearning

./: .flake8  .gitignore  README.md  pyproject.toml  run_output.txt
config/: config.yaml
examples/: fine_tune_EleutherAI_gpt-neo-125M.py
src/unlearn/: config.yaml  eval.py  pipeline.py  setup.py  trainers.py
src/unlearn/data/: __init__.py  retaindataset.py  unlearndataset.py
tests/: test_trainers.py
