[project]
name = "unlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.6.0",
    "black>=25.1.0",
    "datasets>=3.5.0",
    "diffusers>=0.33.1",
    "evaluate>=0.4.3",
    "fastparquet>=2024.11.0",
    "flake8>=7.2.0",
    "flash>=1.0.3",
    "h5py>=3.13.0",
    "ipdb>=0.13.13",
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "mplcursors>=0.6",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "peft>=0.15.2",
    "plotly>=6.0.1",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tdqm>=0.0.1",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torchdata>=0.11.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "trl>=0.16.1",
    "typing>=3.10.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
